--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,7 +1,15 @@
+/* reset the browser */
+*
+{
+	margin:0;
+	padding:0;
+}
 
 body {
-	background-image:url('/media/blackorchid.png');
-	background-repeat:repeat-y repeat-x;
+	/*background-image:url('/media/blackorchid.png');
+	background-repeat:repeat-y repeat-x;*/
+	background-color: #3366CC;
+	font: 12px sans-serif;
 }
 
 div.event{
@@ -10,11 +18,6 @@ div.event{
 
 div.top {
 	margin: auto;
-}
-
-div.content {
-	margin-top: 10px;
-	margin-left: 10px;
 }
 
 div.headerwrapper {
@@ -32,42 +35,90 @@ div.header {
 }
 
 div.navwrapper{
-	margin: auto;
 	width: 900px;
+	margin: auto;
 	background-color: white;
-	margin-bottom: 10px;
 	border-radius:3px;
 }
 
 div.nav {
-	float: right;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
 	margin-bottom: 10px;
-	
+	text-align:left;
 }
 
 div.navlink{
-	position:relative;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 	background-color: white;
 	border-radius: 3px;
-	
+	display:inline;
 }
 
-div.navlinkwrapper{
-	/*margin: 10px;*/
-	display: inline-block;
-}
-
-div.topwrapper {
+div.contentwrapper {
 	background-color: white;
 	width: 900px;
 	margin: auto;
 	border-radius:3px;
 }
+
+div.content {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 20px;
+	margin-bottom: 10px;
+}
+
+div.footerwrapper {
+	margin: auto;
+	text-align:center;
+}
+
+div.footer {
+	
+	margin-top: 8px;
+}
+
+div.yesterdaylink{
+	margin-top: 10px;
+	float: left;
+}
+
+div.tomorrowlink{
+	margin-top: 10px;
+	float: right;
+}
+
+div.eventtype{
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
+/* table stuff */
+
+tr{
+	font: bold 18px sans-serif;
+}
+
+td{
+	font: 10px sans-serif;
+}
+
+/* silly formatting stuff */
+
 .tab { 
 	margin-left: 40px; margin-top: 5px
 }
 
 .tab2 {
+	margin-left: 80px;
+}
+
+.tab3 {
 	margin-left: 80px;
 }
 
