--- a/web/css/main.css
+++ b/web/css/main.css
@@ -120,6 +120,11 @@ div.eventtype{
 	margin-bottom: 1px;
 }
 
+div.agencytype{
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
 /*
 div.statslink {
 	float: center;
