--- a/web/css/main.css
+++ b/web/css/main.css
@@ -26,7 +26,7 @@ div.top {
 
 div.headerwrapper {
 	margin: auto;
-	width: 900px;
+	width: 1100px;
 	background-color: white;
 	border-radius:3px;
 }
@@ -43,7 +43,7 @@ div.header {
  */
 
 div.navwrapper{
-	width: 900px;
+	width: 1100px;
 	height: 60px;
 	margin: auto;
 	background-color: #000;
@@ -84,7 +84,7 @@ div.contentwrapper {
 	border-style:solid;
 	border-width:1px;
 	background-color: white;
-	width: 900px;
+	width: 1100px;
 	margin: auto;
 }
 
@@ -139,6 +139,11 @@ tr{
 
 td{
 	font: 10px sans-serif;
+}
+
+.centeredcell
+{
+	text-align: center;
 }
 
 /* silly formatting stuff */
